SERVER-51275 Synchronize starting the parallel shell with rollback in RollbackResumableIndexBuildTest